ex1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 4231
      protocol: TCP
      targetPort: 8000
